sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:17: error: value =- is not a member of Int
      avantBlanc =-1
                 ^